-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0
-
None
In the beta the QDeclarative Runtime still searched for import plugins in the current application directory. This seems to be broken in the latest builds.
In the beta the QDeclarative Runtime still searched for import plugins in the current application directory. This seems to be broken in the latest builds.