Search for QML import libraries also in application directory

Add QCoreApplication::applicationLibraryPath again to the list of
directories to search for possible QML plugins.

Task-number: QTBUG-10771
Reviewed-by: mae